server: use virtual thread for shutdown hook